<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.developer.julio.complejoborjanathan.Login"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/area_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">
            <EditText
                android:id="@+id/campo_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/til_nombre"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_nombre"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="32dp">
            <EditText
                android:id="@+id/txtapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/til_apellido"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_apellido"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/til_Email"
            android:layout_marginLeft="32dp"
            >
            <EditText
                android:id="@+id/txtemail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/til_email"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_email"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_pass"
            android:layout_marginLeft="32dp"
            >

            <EditText
                android:id="@+id/txtpass"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="5"
                android:hint="@string/til_password"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:layout_centerHorizontal="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!--button bar-->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/ingresar"
            android:textColor="@android:color/white" />
        <Button
            android:layout_width="0dp"
            android:id="@+id/btnCancelar"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancelar"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>
